# doc2dev

./: .env  .env.example  .gitignore  README.md  VECTOR_README.md  db.sql  main.py  pyproject.toml
backend/: repository_db.py
example/es-rs-example/: Cargo.toml
example/es-rs-example/src/: main.rs
frontend/: package.json  pnpm-lock.yaml
frontend/app/: page.tsx
frontend/app/api/query/: route.ts
frontend/app/download/: layout.tsx
frontend/app/query/: layout.tsx  page.tsx
frontend/components/: dropdown.tsx  navbar.tsx  search.tsx
frontend/components/ui/: toast.tsx
frontend/doc2dev/: package-lock.json  package.json  pnpm-lock.yaml
frontend/doc2dev/app/: layout.tsx  page.metadata.tsx  page.tsx
frontend/doc2dev/app/api/download/: route.ts
frontend/doc2dev/app/download/: page.tsx
frontend/doc2dev/app/query/: page.tsx
frontend/doc2dev/components/: dropdown.tsx  nav-bar.tsx  search-with-suggestions.tsx
frontend/doc2dev/components/ui/: alert-dialog.tsx
frontend/doc2dev/utils/: date.ts
src/: embed_and_store.py  main.py  markdown_utils.py  mcp_server.py  query_oceanbase.py  repository_db.py  summarize.py
src/doc2dev.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
static/: index.html  query.html
test/: oceanbase-vector.py  validate_github_token.py
