[project]
name = "doc2dev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles==24.1.0",
    "fastapi==0.115.12",
    "pydantic==2.11.3",
    "pygithub==2.6.1",
    "python-dotenv==1.1.0",
    "python-multipart==0.0.20",
    "uvicorn==0.34.2",
]
